# SDF1

./: CMakeLists.txt  README.md
SDF1/: bucket.h  file_header.h  metadata_file.h
SDF1/core/: bucket.h  errors.h  file_header.h  metadata_file.h  raw_file.h  record.h
SDF1/utils/: logging.h  utils.h
cmake/: CMessage.cmake
src/: metadata_file.cxx
src/core/: bucket.cxx  metadata_file.cxx
src/utils/: logging.cxx  utils.cxx
